# things

./: .gitignore  Cargo.toml  README.md
.github/workflows/: account-ci.yaml  event-sourcing-ci.yaml
account/: Cargo.toml  docker-compose.yaml
account/api/: Cargo.toml
account/api/src/: container.rs  errors.rs  extractors.rs  lib.rs  main.rs  middleware.rs  router.rs
account/api/src/handlers/: check_health.rs  common.rs  get_user.rs  mod.rs  refresh_access_token.rs  refresh_tokens.rs  sign_in.rs  sign_out.rs  sign_up.rs
account/database/initialisation/: 01_create_es_tables.sql
account/domain/: Cargo.toml
account/domain/src/identity/: commands.rs  errors.rs  events.rs  mod.rs  models.rs  queries.rs  repositories.rs  services.rs
account/domain/src/identity/models/: entities.rs  services.rs
account/domain/src/user/: commands.rs  errors.rs  events.rs  mod.rs  models.rs  queries.rs
account/infrastructure/: Cargo.toml
account/infrastructure/resources/database/: 01_create_account_tables.sql  01_create_es_tables.sql
account/infrastructure/src/repositories/: identity.rs
event-sourcing/: Cargo.toml  docker-compose.yaml
event-sourcing/db/initialisation/: mysql.sql  postgresql.sql
event-sourcing/src/: aggregate.rs  envelope.rs  event.rs  lib.rs  test.rs
event-sourcing/src/repository/: error.rs  interface.rs  memory.rs  mod.rs  mysql.rs  postgresql.rs  serialization.rs
