[package]
name = "event-sourcing"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["fast-rng", "v4", "serde"] }
async-trait = "0.1"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "uuid", "postgres"] }
thiserror = "1.0"
