[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["mysql", "uuid", "runtime-tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
log = "0.4.20"
env_logger = "0.10.1"
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
event-sourcing = { path = "../../event-sourcing" }
